--- a/Alcanza/Cube.html
+++ b/Alcanza/Cube.html
@@ -506,7 +506,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i14.text.css:text/base/css*/
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 300px; height: 58px;
         -ms-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
@@ -522,7 +522,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.button.css:button/base/css*/
-#i181 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(0,60,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(0,60,150,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i181 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(0,60,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(0,60,150,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i181:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i181:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
@@ -726,7 +726,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
 }
 /*#/#*//*#i5.i186.button.css:button/base/css*/
-#i186 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(0,60,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(0,60,150,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i186 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(0,60,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(0,60,150,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i186:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i186:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i186.i187.positioning.css:positioning/base/css.2*/
@@ -739,7 +739,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i188.text.css:text/base/css*/
 #i188 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i188.i189.positioning.css:positioning/base/css.1*/
-#i188 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 40px;
+#i188 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 300px; height: 40px;
         -ms-transform: translate(-50%, -50%) translate(0px, 68px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(0px, 68px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(0px, 68px) rotate(0deg);
@@ -826,7 +826,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src="https://i.imgur.com/yohriCL.png"/>
+<img id="i184" src="https://i.imgur.com/vgAm3ka.png"/>
 <!--#/#--><!--#i5.i186.button.html:button/html-->
 <button id="i186">Alcanza tu éxito</button>
 <!--#/#--><!--#i5.i188.text.html:text/html-->
