--- a/Meridando Mexico/Video1.html
+++ b/Meridando Mexico/Video1.html
@@ -121,12 +121,12 @@
         }
 
         .videonew_text_title {
-            font-size: 120%;
+            font-size: 130%;
             color: #453936;
             display: inline-block;
             width: 90%;
             margin-bottom: 20px;
-            text-align:left;
+            text-align:center;
             line-height: 1.1em;
         }
 
@@ -330,7 +330,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-               ¿Quieres minimizar los riesgos al expandir tu empresa?
+               El mejor homenaje al vino nacional
             </span>
            
 
