--- a/Meridando Mexico/Video2.html
+++ b/Meridando Mexico/Video2.html
@@ -305,7 +305,7 @@
         </script>
         <div onclick="openUrl();">
         <div class="tgx_cover">
-            <div class="tgx_logo"><span class="tgx_text_bold" style="font-size:70%;">¿Minimiza riesgos?</span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold" style="font-size:70%;">¡Vive la Experiencia!</span></div>
         </div>
            
         <div class="tgx_text">
