--- a/Meridando Mexico/FadeExtendido.html
+++ b/Meridando Mexico/FadeExtendido.html
@@ -150,7 +150,7 @@
         }
 
         .xcaret2_text_small {
-            font-size: 75%;
+            font-size: 90%;
         }
 
         ul {
@@ -340,14 +340,12 @@
            <div class="cta"><span style="font-weight:900; font-size:90%;">¡Vive la Experiencia!</span></div>
            
             <span class="xcaret2_text_title xcaret2_text_bold">
-             Festival Maridando México Grand Puebla
+             Nunca encontrarás una mezcla igual de sabores y olores
             </span>
             <br/>  
             <span class="xcaret2_text_light xcaret2_text_small" style="color:black;">
                 <p style="margin-right:9px; text-align: justify; width: 95%; margin-top: 5px; line-height: 1.1em">
-                    <b>  ¡Disfruta de un día único, lleno de sabor, diversión
-y la mejor compañía!</b><br>
- Visita nuestros tres pabellones en los que despertarás tus sentidos:<br>
+                    
 <b> ·Vinícola: </b> Con los mejores vinos hechos en México<br>
 <b> ·Gastronómico: </b> Con una exquisita selección de sabores para maridar<br>
 <b> ·Curiosidades: </b> Lleno de productos gourmet y artesanales<br>
