--- a/Formatos ADS/Fades/fade-medium.html
+++ b/Formatos ADS/Fades/fade-medium.html
@@ -146,7 +146,7 @@
             margin-top: 20px;
             text-align: center;
             margin-left: -10px;
-            line-height: 1.05em
+            line-height: 1.05em;
         }
 
         .fademedium_text_light {
@@ -163,6 +163,8 @@
 
         .fademedium_text_small {
             font-size: 94%;
+            color:black;
+
         }
 
         ul {
@@ -342,7 +344,7 @@
               Contrata Internet sin cables, sin complicaciones
             </span>
             <br/>  
-            <span class="fademedium_text_light fademedium_text_small" style="color:black;">
+            <span class="fademedium_text_light fademedium_text_small">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 7px; line-height: 1.2em">
                     Ahora la vida es más fácil. <br>
 
