--- a/Meridando Mexico/Slider.html
+++ b/Meridando Mexico/Slider.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg';
+                adfClickTAGUrl = 'https://www.maridandomexico.com/';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -70,12 +70,12 @@
             .cta {
             position: absolute;
             bottom: 85px;
-            width: 100px;
+            width: 150px;
             line-height: 1.3em;
             z-index: 5;
             margin-left: 48%;
             left: -55px;
-            background-color: #fa820a;
+            background-color: #00158c;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -240,22 +240,22 @@
 	 <div class="te-container">
      <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡Reserva ya!</span></div>
+               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡Vive la Experiencia!</span></div>
                 
                 <div class="te-images"> 
                 <img src="https://i.imgur.com/LGSQhN9.png" alt="" /> 
-                <img src="https://i.imgur.com/CPczSJx.jpg" alt="" /> 
-                <img src="https://i.imgur.com/XerqHet.jpg" alt="" /> </div>
+                <img src="https://i.imgur.com/6Zie1Oa.png" alt="" /> 
+                <img src="https://i.imgur.com/3AgzX1h.png" alt="" /> </div>
                 <div class="te-cover">
-                <img src="https://i.imgur.com/DTPcFV2.jpg" alt="" /> </div>
+                <img src="https://i.imgur.com/LGSQhN9.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
-                <div style="margin-top:18px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">Agencia de viajes LIKE </span> <img class="logo" style="margin-top: 32px;" src="https://i.imgur.com/hT5ahC1.png" alt=""> </div>
+                <div style="margin-top:18px; margin-left:0px; margin-right: 1px;">
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:18px; text-align:left;">¿Quieres participar en una cata de vinos mexicanos? </span> <img class="logo" style="margin-top: 20px;" src="https://i.imgur.com/HuCU2WZ.png" alt=""> </div>
                 </div>
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:21px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:8px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.maridandomexico.com/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/pl291ZA.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.maridandomexico.com/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/9LUFwCf.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.maridandomexico.com/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/qnrdSlE.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
