--- a/Meridando Mexico/Cube2.html
+++ b/Meridando Mexico/Cube2.html
@@ -938,7 +938,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">¿Te gusta el vino nacional y la comida local?</div>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src="https://i.imgur.com/6Zie1Oa.png"/>
+<img id="i184" src="https://i.imgur.com/BZh64ro.png"/>
 <!--#/#--><!--#i5.i194.button.html:button/html-->
 <button id="i194">¡Vive la Experiencia!</button>
 <!--#/#--><!--#i5.i241.image.html:image/html-->
@@ -1082,7 +1082,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    
+   
 /*#/#*//*#i5.i184.image.js:image/base/js*/
 
 /*#/#*//*#i194.i195.positioning.js:positioning/base/js.2*/
@@ -1222,7 +1222,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
