--- a/Meridando Mexico/Slider.html
+++ b/Meridando Mexico/Slider.html
@@ -244,7 +244,7 @@
                 
                 <div class="te-images"> 
                 <img src="https://i.imgur.com/LGSQhN9.png" alt="" /> 
-                <img src="https://i.imgur.com/6Zie1Oa.png" alt="" /> 
+                <img src="https://i.imgur.com/BZh64ro.png" alt="" /> 
                 <img src="https://i.imgur.com/3AgzX1h.png" alt="" /> </div>
                 <div class="te-cover">
                 <img src="https://i.imgur.com/LGSQhN9.png" alt="" /> </div>
