--- a/Huawei-ActualidadIphone/ActualidadIphone.html
+++ b/Huawei-ActualidadIphone/ActualidadIphone.html
@@ -871,8 +871,8 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1441958411574-0');
 
 
 <!-- * sidebar.php * -->
-<div id="sidebar" class="sidebar widget-area" role="complementary">
-	<div id="js-fixedSidebar">
+<div id="sidebar" class="sidebar widget-area" role="banner">
+	
 	
 	<div id='biznagaADs'>
                         <iframe src="https://rawgit.com/BiznagaMedia/EngagementTracker/master/Huawei/huaweiScroll.html" width="300" height="600" align="center" scrolling="no"  frameborder="0"></iframe>
@@ -884,6 +884,8 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1441958411574-0');
 googletag.cmd.push(function() { googletag.display('<!--div-gpt-ad-1445364153560-3-->'); });
 </script>
 </div></div> </aside>	</div>
+
+
 <!-- .publi [ Roba1-resto @ home-less ] -->
 	<div id="js-fixedSidebar2">
 		<nav id="social" class="widget">
