--- a/JuanCuervo/story-resize.html
+++ b/JuanCuervo/story-resize.html
@@ -332,8 +332,8 @@ s
 </h3></i> </span> 
 
  <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-20px; padding-top:20px; padding-bottom:10px;">
-                    <a href="https://puntosmedios.com/" style="display:block; margin-left:-10px;" target="_blank">
-                        <div class="img-news" style="background-image:url(https://i.imgur.com/CK6LnlO.jpg); width: 320px;"></div> 
+                    <a href="https://puntosmedios.com/" style="display:block;" target="_blank">
+                        <div class="img-news" style="background-image:url(https://i.imgur.com/CK6LnlO.jpg); width: 320px; margin-left: -15px;"></div> 
                           </a> </span>
 
 <span class="bzm_text_title  bzm_text_medium" style="display: block; color:#000;margin-top: 5px;margin-bottom: 30px;padding-top:30px; font-size:22px;text-align: center;">
