--- a/3Cumbres/videobig.html
+++ b/3Cumbres/videobig.html
@@ -191,7 +191,7 @@
             z-index: 2;
             margin-left: 97px;
             
-            background-color: #fa7c00;
+            background-color: #fa820a;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
