--- a/3Cumbres/videobig.html
+++ b/3Cumbres/videobig.html
@@ -254,7 +254,7 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe style="margin-left:-10px;" width="320"; height="185"src="https://www.youtube.com/embed/aRDdLP-lum8?rel=0&autoplay=1&modestbranding=0&playlist=kxXuM8PZO3E&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left:-10px;" width="320"; height="185"src="https://www.youtube.com/embed/aRDdLP-lum8?rel=0&autoplay=1&modestbranding=0&playlist=aRDdLP-lum8&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
@@ -272,7 +272,7 @@
           
 
 
- <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-20px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://trescumbres.com.mx/wp/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/7NcsJOE.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://trescumbres.com.mx/wp/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/pb0ckbL.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://trescumbres.com.mx/wp/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/5FTo81p.png" title="compartir en twitter" width="22" /></a>
+ <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-23px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://trescumbres.com.mx/wp/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/7NcsJOE.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://trescumbres.com.mx/wp/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/pb0ckbL.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://trescumbres.com.mx/wp/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/5FTo81p.png" title="compartir en twitter" width="22" /></a>
            
            <img src="https://i.imgur.com/2jk0Bla.jpg" style="height:55px; margin-left: 90px;margin-top:-2px;"> </span></div>
             </div>
