--- a/3Cumbres/FadeBig.html
+++ b/3Cumbres/FadeBig.html
@@ -155,7 +155,7 @@
         }
 
         .tgx_text_bold {
-            font-weight: 800;
+            font-weight: 750;
         }
 
         .tgx_text_small {
@@ -341,7 +341,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               Live Inspired by Nature<br> | Conoce Tres Cumbres |<br> Departamentos Exclusivos desde 132m2 y con Impresionante Casa Club. Plusvalía Garantizada en Santa Fe.
+               Live Inspired by Nature.<br>  Conoce Tres Cumbres: <br> Departamentos Exclusivos desde 132m2 y con Impresionante Casa Club. Plusvalía Garantizada en Santa Fe.
             </span>
             <br/>  
             
