--- a/3Cumbres/videobig.html
+++ b/3Cumbres/videobig.html
@@ -289,7 +289,7 @@
             var player;
             function onYouTubeIframeAPIReady() {
                 ytplayer = new YT.Player('ytplayer', {
-                    height: '280',
+                    height: '350',
                     width: '300',
                     videoId: 'aRDdLP-lum8',
                     autoplay: 1,
@@ -332,7 +332,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-               Live Inspired by Nature <br>| Conoce Tres Cumbres |<br> Departamentos Exclusivos desde 132m2 y con Impresionante Casa Club. Plusvalía Garantizada en Santa Fe.
+               Live Inspired by Nature. <br> Conoce Tres Cumbres:  <br> Departamentos Exclusivos desde 132m2 y con Impresionante Casa Club. Plusvalía Garantizada en Santa Fe.
             </span>
            
 
