--- a/3Cumbres/video2.html
+++ b/3Cumbres/video2.html
@@ -330,7 +330,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-               Live Inspired by Nature | Conoce Tres Cumbres <br> Departamentos Exclusivos desde 132m2 y con Impresionante Casa Club. Plusvalía Garantizada en Santa Fe.
+               Live Inspired by Nature. Conoce Tres Cumbres: <br> Departamentos Exclusivos desde 132m2 y con Impresionante Casa Club. Plusvalía Garantizada en Santa Fe.
             </span>
            
 
