--- a/SkySantafe/Cube.html
+++ b/SkySantafe/Cube.html
@@ -1000,7 +1000,7 @@ cube_i2.init({
     autoRotateEnabled: true,
     autoRotateDelay: 3,
     autoRotateDirection: 'rotateNext',
-    defaultButtonsOnPanels: true,
+    defaultButtonsOnPanels: false,
     transition: 0.8
 });
 
