--- a/SkySantafe/slider.html
+++ b/SkySantafe/slider.html
@@ -75,7 +75,7 @@
             z-index: 5;
             margin-left: 90px;
             
-            background-color: #fa820a;
+            background-color: #730f45;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
