correccion las flores

--- a/LAS FLORES/video3.html
+++ b/LAS FLORES/video3.html
@@ -335,7 +335,7 @@
             </span>
 
             <span class="videonew_text_medium" style="margin-top: -10px;">
-             Departamentos de Lujo desde 106m2, Ubicación Privilegiada sobre Periférico.<b>Invierte HOY.</b>
+             Departamentos de Lujo desde 106m2, Ubicación Privilegiada sobre Periférico.
             </span>
            
 
