Ajuste textos Sky

--- a/SkySantafe/Cube.html
+++ b/SkySantafe/Cube.html
@@ -915,7 +915,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/09DjkWu.png"/>
 <!--#/#--><!--#i4.i183.text.html:text/html-->
-<div id="i183">Conoce Sky Santa Fe: Conoce Sky Santa Fe, Departamentos Exclusivos en el corazón de Santa Fe y Amenidades de Alto Nivel.</div>
+<div id="i183">Conoce Sky Santa Fe, Departamentos de Lujo con Amenidades de Alto Nivel en el corazón de Santa Fe desde $34,500* al Mes.</div>
 <!--#/#--><!--#i4.i185.button.html:button/html-->
 <button id="i185">Regístrate ahora</button>
 <!--#/#--><!--#i4.i202.image.html:image/html-->
@@ -935,7 +935,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i181.text.html:text/html-->
-<div id="i181">Conoce Sky Santa Fe: Conoce Sky Santa Fe, Departamentos Exclusivos en el corazón de Santa Fe y Amenidades de Alto Nivel.</div>
+<div id="i181">Conoce Sky Santa Fe, Departamentos de Lujo con Amenidades de Alto Nivel en el corazón de Santa Fe desde $34,500* al Mes.</div>
 <!--#/#--><!--#i5.i188.image.html:image/html-->
 <img id="i188" src="https://i.imgur.com/Pr9dXgY.png"/>
 <!--#/#--><!--#i5.i192.button.html:button/html-->
@@ -957,7 +957,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Conoce Sky Santa Fe: Conoce Sky Santa Fe, Departamentos Exclusivos en el corazón de Santa Fe y Amenidades de Alto Nivel.</div>
+<div id="i34">Conoce Sky Santa Fe, Departamentos de Lujo con Amenidades de Alto Nivel en el corazón de Santa Fe desde $34,500* al Mes.</div>
 <!--#/#--><!--#i6.i190.image.html:image/html-->
 <img id="i190" src="https://i.imgur.com/fODMMl9.png"/>
 <!--#/#--><!--#i6.i206.image.html:image/html-->
