--- a/SkySantafe/FadeBig.html
+++ b/SkySantafe/FadeBig.html
@@ -341,7 +341,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-              <br> Conoce Sky Santa Fe <br> Departamentos Exclusivos en el corazón de Santa Fe. Hasta 178m2 y Amenidades de Alto Nivel. Invierte Hoy - Plusvalía Garantizada.
+              <br> Vive al más Alto Nivel como sólo tú mereces.  <b> Sky Santa Fe, </b> Departamentos de Lujo con Impresionante Casa Club y hasta 178m2. Opciones de Pago. <i> ¡Invierte! </i>
             </span>
             <br/>  
             
