listo las flores

--- a/LAS FLORES/fade.html
+++ b/LAS FLORES/fade.html
@@ -138,7 +138,7 @@
         }
 
         .value_text_title {
-            font-size: 180%;
+            font-size: 140%;
             color: #453936;
             display: inline-block;
             width: 97%;
@@ -162,7 +162,7 @@
         }
 
         .value_text_small {
-            font-size: 120%;
+            font-size: 105%;
         }
 
         ul {
@@ -339,7 +339,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             Vive tu Siguiente Nivel en Las Flores
+             Departamentos de Lujo en San Ángel desde $41,500 Mensuales. Invierte con Nosotros.
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
