--- a/LAS FLORES/slider.html
+++ b/LAS FLORES/slider.html
@@ -211,7 +211,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:16px; text-align:left;">Vive tu Siguiente Nivel en Las Flores.  </span> 
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:14px; text-align:left;">Tú y tu familia merecen Vivir el Siguiente Nivel. </span> 
 
                         <span class="bzm_text_medium bzm_text_bold" style="color:#000000; font-size:13px; text-align:left; line-height: 0,8em;"> Departamentos de Lujo desde 106m2, Ubicación Privilegiada sobre Periférico. </span><img class="logo" style="margin-top: -3px;" src="https://i.imgur.com/bPA5u0M.png" alt=""> </div>
 
