--- a/LAS FLORES/video3.html
+++ b/LAS FLORES/video3.html
@@ -112,17 +112,17 @@
 
         .videonew_text {
             position: absolute;
-            top: 70%;
+            top: 72%;
             left: 5px;
             width: 98%;
             padding: 0.3em;
-            line-height: 0.8em;
-            color: #453936;
+            line-height: 1.2em;
+            color: #000;
         }
 
         .videonew_text_title {
-            font-size: 93%;
-            color: #453936;
+            font-size: 120%;
+            color: #000;
             display: inline-block;
             width: 90%;
             margin-bottom: 0px;
@@ -331,15 +331,12 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-              Vive tu Siguiente Nivel en Las Flores.
+             Tú y tu familia merecen Vivir el Siguiente Nivel.
             </span>
 
-            <span class="videonew_text_medium" style="margin-top: -12px;">
-             Departamentos de Lujo desde 106m2, Ubicación Privilegiada sobre Periférico.
-            </span>
            
 
-            <div style="bottom:0px;height: 1px;text-align:left;margin-top:2px">
+            <div style="bottom:0px;height: 1px;text-align:left;margin-top:4px">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.copri.com.mx/vivienda-residencial/las-flores-2020/"  target="block">    
