--- a/HBO GO/slider2.html
+++ b/HBO GO/slider2.html
@@ -239,7 +239,7 @@
 	 <div class="te-container">
      <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Descargar App</span></div>
+               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">No es Tv es HBO</span></div>
                 <div class="te-images"> 
                 <img src="https://i.imgur.com/NrlqbZ8.png" alt="" />
                 <img src="https://i.imgur.com/qz0oDkS.png" alt="" /> 
