--- a/HBO GO/slider2.html
+++ b/HBO GO/slider2.html
@@ -44,7 +44,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-    <title>slider1</title>
+    <title>HBOslider2</title>
 	  <style>
 		.cannabis a,
         .cannabis a:hover {
