--- a/HBO GO/slider2.html
+++ b/HBO GO/slider2.html
@@ -251,7 +251,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:13px; margin-left:0px; margin-right: 10px;line-height: 0.4pt;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:15px; text-align:left;">¿Te apasionan las series del momento?. ¡Con HBO Go no te perderás ningún capítulo. </span>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:15px; text-align:left;">¿Te apasionan las series del momento?. No te perderás ningún capítulo con HBO Go. </span>
                     
                      
                        <img class="logo" style="margin-top: 21px;" src="https://i.imgur.com/8hNFGIP.png" alt=""> </div>
