--- a/HBO GO/FadeBig2.html
+++ b/HBO GO/FadeBig2.html
@@ -341,7 +341,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               ¿Tienes un minuto libre?,<br>con HBO Go no desperdiciarás un segundo
+              ¿Te apasionan las series del momento?<br>No te perderás ningún capítulo con HBO Go. 
             </span>
             <br/>  
             
