--- a/HBO GO/FadeBig1.html
+++ b/HBO GO/FadeBig1.html
@@ -341,7 +341,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-               ¿Tienes un minuto libre?,<br>con HBO Go no desperdiciarás un segundo
+               ¿Tienes un minuto libre?,<br>con HBO Go no desperdiciarás un segundo.
             </span>
             <br/>  
             
