--- a/HBO GO/slider1.html
+++ b/HBO GO/slider1.html
@@ -252,7 +252,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:13px; margin-left:0px; margin-right: 10px;line-height: 0.4pt;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:15px; text-align:left;">¿Tienes un minuto libre?,<br>  con HBO Go no desperdiciarás un segundo</span>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:15px; text-align:left;">¿Tienes un minuto libre?,<br>  con HBO Go no desperdiciarás un segundo.</span>
                     
                      
                        <img class="logo" style="margin-top: 8px;" src="https://i.imgur.com/8hNFGIP.png" alt=""> </div>
