--- a/3Cumbres/slider.html
+++ b/3Cumbres/slider.html
@@ -252,7 +252,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:13px; margin-left:0px; margin-right: 10px;line-height: 0.4pt;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:13px; text-align:left;">Live Inspired by Nature. Conoce Tres Cumbres: <br> Departamentos de Lujo con Impresionante Casa Club desde $53,000 Mensuales.</span>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:13px; text-align:left;">Live Inspired by Nature. Conoce Tres Cumbres: <br> Departamentos de Lujo con Impresionante Casa Club desde $53,000* Mensuales.</span>
                     
                      
                        <img class="logo" style="margin-top: 5px;" src="https://i.imgur.com/2jk0Bla.jpg" alt=""> </div>
