--- a/3Cumbres/video2.html
+++ b/3Cumbres/video2.html
@@ -330,7 +330,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-               Live Inspired by Nature. Conoce Tres Cumbres: Departamentos de Lujo con Impresionante Casa Club desde $53,000 Mensuales.
+               Live Inspired by Nature. Conoce Tres Cumbres: Departamentos de Lujo con Impresionante Casa Club desde $53,000* Mensuales.
             </span>
            
 
