--- a/LAS FLORES/Cube.html
+++ b/LAS FLORES/Cube.html
@@ -921,7 +921,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i247.button.html:button/html-->
 <button id="i247">¡Regístrate ahora!</button>
 <!--#/#--><!--#i4.i279.text.html:text/html-->
-<div id="i279">Departamentos de Lujo en San Ángel desde $41,500 Mensuales. Invierte con Nosotros.</div>
+<div id="i279">Departamentos de Lujo en San Ángel desde $41,500* Mensuales. Invierte con Nosotros.</div>
 <!--#/#--><!--#i4.i313.image.html:image/html-->
 <img id="i313" src="https://i.imgur.com/bPA5u0M.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -947,7 +947,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i249.image.html:image/html-->
 <img id="i249" src="https://i.imgur.com/bPA5u0M.png"/>
 <!--#/#--><!--#i5.i283.text.html:text/html-->
-<div id="i283">Departamentos de Lujo en San Ángel desde $41,500 Mensuales. Invierte con Nosotros.</div>
+<div id="i283">Departamentos de Lujo en San Ángel desde $41,500* Mensuales. Invierte con Nosotros.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i253.image.html:image/html-->
@@ -969,7 +969,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i243.image.html:image/html-->
 <img id="i243" src="https://i.imgur.com/bPA5u0M.png"/>
 <!--#/#--><!--#i6.i287.text.html:text/html-->
-<div id="i287">Departamentos de Lujo en San Ángel desde $41,500 Mensuales. Invierte con Nosotros.</div>
+<div id="i287">Departamentos de Lujo en San Ángel desde $41,500* Mensuales. Invierte con Nosotros.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i209.image.html:image/html-->
