--- a/LAS FLORES/fade.html
+++ b/LAS FLORES/fade.html
@@ -339,7 +339,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             Departamentos de Lujo en San Ángel desde $41,500 Mensuales. Invierte con Nosotros.
+             Departamentos de Lujo en San Ángel desde $41,500* Mensuales. Invierte con Nosotros.
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
