--- a/HBO GO/FadeBig2.html
+++ b/HBO GO/FadeBig2.html
@@ -57,18 +57,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/Z3YGe8q.png");
+            background: url("https://i.imgur.com/C11Y74A.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/npfJOoO.png");
+            background: url("https://i.imgur.com/6aKV6Ly.png");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/siqxpXw.png");
+            background: url("https://i.imgur.com/qkr3UoU.png");
             background-size: cover;
             
         }
