--- a/HBO GO/slider2.html
+++ b/HBO GO/slider2.html
@@ -241,11 +241,11 @@
             <div id="te-wrapper" class="te-wrapper">
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">No es Tv es HBO</span></div>
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/NrlqbZ8.png" alt="" />
-                <img src="https://i.imgur.com/qz0oDkS.png" alt="" /> 
-                <img src="https://i.imgur.com/znQOnqK.png" alt="" /> </div>
+                <img src="https://i.imgur.com/kDsUFXy.png" alt="" />
+                <img src="https://i.imgur.com/bJ1RUEK.png" alt="" /> 
+                <img src="https://i.imgur.com/QHwCNxi.png" alt="" /> </div>
                 <div class="te-cover"> 
-                <img src="https://i.imgur.com/qz0oDkS.png" alt="" /> </div>
+                <img src="https://i.imgur.com/bJ1RUEK.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
