--- a/Kia Motors/FadeBig.html
+++ b/Kia Motors/FadeBig.html
@@ -322,7 +322,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://play.hbogo.com/");
+            window.open("https://www.kia.com/pe/");
         }
     </script>
 </head>
@@ -349,7 +349,7 @@
                 <p style="margin-right:9px; text-align: justify; width: 95%; margin-top: 15px; line-height: 1.2em">
   
 
-<!-- <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-10px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://play.hbogo.com/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/ifgNZcK.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://play.hbogo.com/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/aN97IPX.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://play.hbogo.com/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/u6wNGDh.png" title="compartir en twitter" width="22" /></a>
+<!-- <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-10px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.kia.com/pe/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/ifgNZcK.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.kia.com/pe/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/aN97IPX.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.kia.com/pe/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/u6wNGDh.png" title="compartir en twitter" width="22" /></a>
               
                   </span>
             </div>-->
