--- a/Chevrolet Onix/fijo-gif.html
+++ b/Chevrolet Onix/fijo-gif.html
@@ -7,20 +7,20 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <title>Chevrolet Onix</title>
     <style>
-        .PapaJohnFijo a,
-        .PapaJohnFijo a:hover {
+        .carro2 a,
+        .carro2 a:hover {
             text-decoration: none;
             color: white
         }
 
-        .PapaJohnFijo .te-container {
+        .carro2 .te-container {
             width: 300px;
             height: 250px;
             margin: 0 auto;
             background-color: #ffffff;
         }
 
-        .PapaJohnFijo .te-wrapper {
+        .carro2 .te-wrapper {
             position: relative;
             width: 300px;
             height: 250px;
@@ -28,26 +28,26 @@
             font-family: Source Sans Pro;
         }
 
-        .PapaJohnFijo .bzm_text {
+        .carro2 .bzm_text {
             margin-top: 10px;
             margin-left: 5px;
             text-align: left;
         }
 
-        .PapaJohnFijo .bzm_text_bold,
-        .PapaJohnFijo .bzm_text_medium {
+        .carro2 .bzm_text_bold,
+        .carro2 .bzm_text_medium {
             line-height: 1.4;
             text-decoration: none;
             color: #000;
         }
 
-        .PapaJohnFijo .bzm_text_bold {
+        .carro2 .bzm_text_bold {
             font-size: 19px;
             font-weight: 700;
             line-height: 1;
         }
 
-        .PapaJohnFijo .bzm_text_medium {
+        .carro2 .bzm_text_medium {
             font-size: 16px;
             font-weight: 400;
         }
@@ -58,54 +58,54 @@
 
         /*******************************************************/
 
-        .PapaJohnFijo .te-perspective {
+        .carro2 .te-perspective {
             -webkit-perspective: 1000;
         }
 
-        .PapaJohnFijo .te-cover,
-        .PapaJohnFijo .te-transition {
+        .carro2 .te-cover,
+        .carro2 .te-transition {
             width: 300px;
             height: 170px;
         }
 
-        .PapaJohnFijo .te-cover.te-hide,
-        .PapaJohnFijo .te-transition,
-        .PapaJohnFijo .te-images {
+        .carro2 .te-cover.te-hide,
+        .carro2 .te-transition,
+        .carro2 .te-images {
             display: none;
         }
 
-        .PapaJohnFijo .te-images {
+        .carro2 .te-images {
             width: 300px;
             height: 170px;
         }
 
-        .PapaJohnFijo .te-cover>img,
-        .PapaJohnFijo .te-images>img {
+        .carro2 .te-cover>img,
+        .carro2 .te-images>img {
             width: 300px;
             height: 170px;
         }
 
-        .PapaJohnFijo .te-transition.te-show {
+        .carro2 .te-transition.te-show {
             display: block;
         }
 
-        .PapaJohnFijo .te-back,
-        .PapaJohnFijo .te-front {
+        .carro2 .te-back,
+        .carro2 .te-front {
             position: absolute;
             width: 100%;
             height: 100%;
         }
 
-        .PapaJohnFijo .te-front {
+        .carro2 .te-front {
             z-index: 2;
         }
 
-        .PapaJohnFijo .te-back {
+        .carro2 .te-back {
             z-index: 1;
             -webkit-backface-visibility: hidden;
         }
 
-        .PapaJohnFijo .te-transition img {
+        .carro2 .te-transition img {
             position: absolute;
             left: 0px;
             top: 0px;
@@ -113,15 +113,15 @@
 
         /***************** example3 ********************/
 
-        .PapaJohnFijo .te-example3 .te-front {
+        .carro2 .te-example3 .te-front {
             z-index: 1;
         }
 
-        .PapaJohnFijo .te-example3 .te-back {
+        .carro2 .te-example3 .te-back {
             z-index: 2;
         }
 
-        .PapaJohnFijo .te-example3.te-show .te-back {
+        .carro2 .te-example3.te-show .te-back {
             -webkit-animation: example3Back 0.4s ease-out forwards;
         }
 
@@ -136,7 +136,7 @@
             }
         }
 
-        .PapaJohnFijo #botones-para-compartir {
+        .carro2 #botones-para-compartir {
             text-align: right;
         }
 
@@ -165,7 +165,7 @@
             -o-transition: all .5s;
         }
 
-        .PapaJohnFijo .logo {
+        .carro2 .logo {
             z-index: 2;
             background-color: transparent;
             border-radius: 0px;
@@ -176,7 +176,7 @@
             margin-left: 0px
         }
 
-        .PapaJohnFijo .ctaButton {
+        .carro2 .ctaButton {
             position: absolute;
             cursor: pointer;
             opacity: 1;
@@ -225,7 +225,7 @@
     </style>
 </head>
 
-<body class="PapaJohnFijo" style="margin:0px;">
+<body class="carro2" style="margin:0px;">
     <div class="te-container">
         <a href="https://www.chevrolet.com.pe/" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
