--- a/Nike/Fade.html
+++ b/Nike/Fade.html
@@ -268,7 +268,7 @@
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
         <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;"></span></div>
-        <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" style="display: block;" target="_blank">
+        <a href="https://news.nike.com/news/air-jordan-33" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
